@@ -41,6 +41,7 @@
                     <configuration>
                         <source>22</source>
                         <target>22</target>
+
                     </configuration>
                 </plugin>
                 <plugin>
@@ -56,7 +57,7 @@
                         <additionalClasspathElements>
                             <additionalClasspathElement>${project.basedir}/src/main/conf</additionalClasspathElement>
                         </additionalClasspathElements>
-                        <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+                        <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED, --enable-native-access=ALL-UNNAMED</argLine>
                         <suiteXmlFiles>
                             <suiteXmlFile>testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
